# MY-APP

./: .env  .gitignore  DevelopChange.md  EditInflow.js  FunCal.md  README.md  ShiftVENV_DBIntegration.md  alembic.ini  browser.html  docker-compose.override.yml  docker-compose.yml  electron.cjs  env.txt  index.html  login.html  nginx.conf  oldEditInflow.js  package-lock.json  package.json  playwright.config.ts  requirements.txt  tsconfig.json  vite.config.ts
backend/: example.db  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: add_new_column.py  crud.py  example_test.py  main.py  models.py  utils.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 237104ab5d52_initial_migration.py  404a6e6c6b88_add_update_password_status_column.py  53a47db9f90b_initial.py  69178ca6c229_initial.py  cd7d7057f1d0_add_quantity_field_in_assets.py  dbf02501dbd6_updated_types_and_fkey_mapping_in_.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: assets.py  common.py  dashboard.py  inflows.py  investments.py  liability.py  login.py  logs.py  outflows.py  private.py  users.py
backend/app/cf_models/: assets.py  common.py  dashboard.py  inflows.py  investments.py  liability.py  logs.py  outflows.py  schemas.py  sqlite_model.py  users.py  utils.py
backend/app/core/: config.py
backend/my_test/: add_new_column.py  if_already_have_tables.py  insert_data.py  see_tables.py  test.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  preload.js  tsconfig.json  vite.config.js  vite.config.ts
frontend/public/: disclaimer.txt
frontend/public/css/: DateRangePicker.css  changeIVY.css  dashboard.css  ie8.css  old_dash_backup.css  settingsIVY.css  style.css  yearDate.css
frontend/public/js/: Utils.js  api-client.js  index.js  login.js  polyfills.js  sidebar.js
frontend/public/js/components/Admin/: AddUser.js  EditUser.js  UsersTable.js
frontend/public/js/components/Appointment/: AddAppt.js  AppointmentList.js  EditAppt.js
frontend/public/js/components/Dashboard/: DateRangePicker.js  EarlyChart.js  FinancialOverview.js  InflowOutflowOverview.js  WellcomeBox.js  (+1 more)
frontend/public/js/routes/: activity.js  admin.js  assets.js  dashboard.js  inflow.js  investment.js  liability.js  outflow.js  settings.js
frontend/src/: MiniB.jsx  logincss.css  theme.js
public/css/: dashboard.css  firefox-50.css  style.css
public/js/: Utils.js  api-client.js  assets.js  index.js  inflow.js  investment.js  liability.js  login.js  outflow.js  polyfills.js  sidebar.js
public/js/components/Dashboard/: EarlyChart.js  FinancialOverview.js  InflowOutflowOverview.js  WellcomeBox.js
public/js/components/Heads/: AddHead.js
public/js/components/UserSettings/: ChangePassword.js  UserInformation.js
public/js/components/assets/: EditAsset.js  ViewAsset.js
public/js/components/common/: ActionsMenu.js  DeleteAlert.js  Utils.js
public/js/components/inflow/: AddInflow.js  EditInflow.js  inflowUtils.js
public/js/components/investment/: AddInvestment.js  EditInvestment.js  InvestHistory.js
public/js/components/liability/: AddLiability.js  EditLiability.js  LiabilityHistory.js  PayLiability.js
public/js/components/outflow/: AddOutflow.js  EditOutflow.js
public/js/lib/: chart.umd.js
public/js/routes/: assets.js  dashboard.js  inflow.js  investment.js  liability.js
src/: App.jsx  main.jsx
(+28 files in other folders)
