[project]
name = "app"
version = "0.1.0"
description = ""
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi[standard]==0.115.0",
    "python-multipart==0.0.10",
    "email-validator==2.2.0",
    "passlib[bcrypt]==1.7.4",
    "tenacity==8.5.0",
    "pydantic==2.9.2",
    "emails==0.6",
    "jinja2==3.1.4",
    "alembic==1.13.2",
    "httpx==0.27.2",
    "psycopg[binary]==3.2.2",
    "sqlmodel==0.0.22",
    # Pin bcrypt until passlib supports the latest
    "bcrypt==4.0.1",
    "pydantic-settings==2.5.2",
    "sentry-sdk[fastapi]==1.45.1",
    "pyjwt==2.9.0",
    "pytz==2024.2",
    "pymysql==1.1.1",
    "requests==2.32.3",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.35",
    "annotated-types==0.7.0",
    "anyio==4.6.0",
    "cachetools==5.5.0",
    "certifi==2024.8.30",
    "cffi==1.17.1",
    "cfgv==3.4.0",
    "chardet==5.2.0",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "coverage==7.6.1",
    "cryptography==44.0.0",
    "cssselect==1.2.0",
    "cssutils==2.11.1",
    "distlib==0.3.8",
    "dnspython==2.6.1",
    "exceptiongroup==1.2.2",
    "fastapi-cli==0.0.5",
    "filelock==3.16.1",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "httpcore==1.0.5",
    "httptools==0.6.1",
    "identify==2.6.1",
    "idna==3.10",
    "iniconfig==2.0.0",
    "lxml==5.3.0",
    "mako==1.3.5",
    "markdown-it-py==3.0.0",
    "markupsafe==2.1.5",
    "mdurl==0.1.2",
    "more-itertools==10.5.0",
    "mypy==1.11.2",
    "mypy-extensions==1.0.0",
    "nodeenv==1.9.1",
    "packaging==24.1",
    "platformdirs==4.3.6",
    "pluggy==1.5.0",
    "pre-commit==3.8.0",
    "premailer==3.10.0",
    "psycopg-binary==3.2.2",
    "pycparser==2.22",
    "pydantic-core==2.23.4",
    "pygments==2.18.0",
    "pytest==7.4.4",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.2",
    "rich==13.8.1",
    "ruff==0.6.7",
    "shellingham==1.5.4",
    "six==1.16.0",
    "starlette==0.38.6",
    "tomli==2.0.1",
    "typer==0.12.5",
    "types-passlib==1.7.7.20240819",
    "typing-extensions==4.12.2",
    "urllib3==2.2.3",
    "uvicorn==0.30.6",
    "uvloop==0.20.0",
    "virtualenv==20.26.5",
    "watchfiles==0.24.0",
    "websockets==13.1",
]

[tool.uv]
dev-dependencies = [
    "pytest<8.0.0,>=7.4.3",
    "mypy<2.0.0,>=1.8.0",
    "ruff<1.0.0,>=0.2.2",
    "pre-commit<4.0.0,>=3.6.2",
    "types-passlib<2.0.0.0,>=1.7.7.20240106",
    "coverage<8.0.0,>=7.4.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py310"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
